[gd_scene load_steps=80 format=2]

[ext_resource path="res://Character/Trailer.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/rmsmartshape/shapes/point.gd" type="Script" id=2]
[ext_resource path="res://addons/rmsmartshape/shapes/shape_closed.gd" type="Script" id=3]
[ext_resource path="res://addons/rmsmartshape/vertex_properties.gd" type="Script" id=4]
[ext_resource path="res://addons/rmsmartshape/materials/shape_material.gd" type="Script" id=5]
[ext_resource path="res://addons/rmsmartshape/shapes/point_array.gd" type="Script" id=6]
[ext_resource path="res://Levels/Level4.gd" type="Script" id=7]
[ext_resource path="res://Character/Character.tscn" type="PackedScene" id=8]
[ext_resource path="res://Setpieces/Assets/school_setpiece.png" type="Texture" id=9]
[ext_resource path="res://Character/OldMan_Chair.tscn" type="PackedScene" id=10]
[ext_resource path="res://Setpieces/Assets/grass_centre.png" type="Texture" id=11]
[ext_resource path="res://Setpieces/Resources/dirt_mm.tres" type="Resource" id=12]
[ext_resource path="res://Setpieces/Resources/grass_mm.tres" type="Resource" id=13]
[ext_resource path="res://Fonts/papers_label_text.tres" type="DynamicFontData" id=14]
[ext_resource path="res://Bottom.gd" type="Script" id=15]
[ext_resource path="res://InvisibleGate.gd" type="Script" id=16]
[ext_resource path="res://Setpieces/Assets/Background/Front_burb.png" type="Texture" id=17]
[ext_resource path="res://Setpieces/Assets/Background/Middle_burb.png" type="Texture" id=18]
[ext_resource path="res://Setpieces/Assets/Background/Back_burb.png" type="Texture" id=19]
[ext_resource path="res://UI/Prompt.tres" type="SpriteFrames" id=22]
[ext_resource path="res://Setpieces/Assets/Props/House_1.png" type="Texture" id=23]
[ext_resource path="res://Goal1.gd" type="Script" id=24]
[ext_resource path="res://Props/Assets/newspaper.png" type="Texture" id=25]
[ext_resource path="res://Setpieces/Assets/Props/grass_extender.png" type="Texture" id=26]
[ext_resource path="res://Fonts/goal_font.tres" type="DynamicFontData" id=27]
[ext_resource path="res://Goal2.gd" type="Script" id=28]
[ext_resource path="res://Setpieces/Assets/Props/House_14.png" type="Texture" id=29]
[ext_resource path="res://Sound/Music.ogg" type="AudioStream" id=30]
[ext_resource path="res://Props/Assets/stop_sign.png" type="Texture" id=31]
[ext_resource path="res://MainMenu/GameMenu.tscn" type="PackedScene" id=32]
[ext_resource path="res://Setpieces/Assets/Props/House2_driveway.png" type="Texture" id=33]
[ext_resource path="res://Sound/WinNoise.ogg" type="AudioStream" id=34]
[ext_resource path="res://Levels/Goal3.gd" type="Script" id=35]
[ext_resource path="res://Sound/delivery.ogg" type="AudioStream" id=43]
[ext_resource path="res://MainMenu/LoseMenu.tscn" type="PackedScene" id=44]
[ext_resource path="res://MainMenu/TimeoutMenu.tscn" type="PackedScene" id=45]

[sub_resource type="Resource" id=112]
script = ExtResource( 4 )
texture_idx = -8
flip = false
width = 1.0

[sub_resource type="Resource" id=113]
script = ExtResource( 2 )
position = Vector2( 622.15, 555.326 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 112 )

[sub_resource type="Resource" id=114]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=115]
script = ExtResource( 2 )
position = Vector2( 3048.68, 550.963 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 114 )

[sub_resource type="Resource" id=116]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=117]
script = ExtResource( 2 )
position = Vector2( 3042.25, 1512.39 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 116 )

[sub_resource type="Resource" id=118]
script = ExtResource( 4 )
texture_idx = -8
flip = false
width = 1.0

[sub_resource type="Resource" id=119]
script = ExtResource( 2 )
position = Vector2( 622.15, 555.326 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 118 )

[sub_resource type="Resource" id=120]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=121]
script = ExtResource( 2 )
position = Vector2( 615.652, 1527.26 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 120 )

[sub_resource type="Resource" id=122]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=123]
script = ExtResource( 2 )
position = Vector2( 2751.56, 552.397 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 122 )

[sub_resource type="Resource" id=124]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=125]
script = ExtResource( 2 )
position = Vector2( 1654.48, 552.162 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 124 )

[sub_resource type="Resource" id=126]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=127]
script = ExtResource( 2 )
position = Vector2( 625.612, 1009.73 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 126 )

[sub_resource type="Resource" id=128]
script = ExtResource( 6 )
_points = {
0: SubResource( 113 ),
1: SubResource( 115 ),
2: SubResource( 117 ),
3: SubResource( 119 ),
4: SubResource( 121 ),
10: SubResource( 123 ),
12: SubResource( 125 ),
13: SubResource( 127 )
}
_point_order = [ 0, 12, 10, 1, 2, 4, 13, 3 ]
_constraints = {
[ 0, 3 ]: 15
}
_next_key = 14

[sub_resource type="Resource" id=18]
script = ExtResource( 5 )
_edge_meta_materials = [ ExtResource( 13 ), ExtResource( 12 ) ]
fill_textures = [ ExtResource( 11 ) ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="Resource" id=129]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=130]
script = ExtResource( 2 )
position = Vector2( 1916.04, 605.333 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 129 )

[sub_resource type="Resource" id=131]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=132]
script = ExtResource( 2 )
position = Vector2( 4173.56, 566.603 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 131 )

[sub_resource type="Resource" id=133]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=134]
script = ExtResource( 2 )
position = Vector2( 4167.98, 1556.85 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 133 )

[sub_resource type="Resource" id=135]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=136]
script = ExtResource( 2 )
position = Vector2( 1916.04, 605.333 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 135 )

[sub_resource type="Resource" id=137]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=138]
script = ExtResource( 2 )
position = Vector2( 1921.93, 1556.47 )
point_in = Vector2( 0, 0 )
point_out = Vector2( 0, 0 )
properties = SubResource( 137 )

[sub_resource type="Resource" id=139]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=140]
script = ExtResource( 2 )
position = Vector2( 2983.6, 662.989 )
point_in = Vector2( -376.001, -74.5235 )
point_out = Vector2( 303.883, 58.1978 )
properties = SubResource( 139 )

[sub_resource type="Resource" id=141]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=142]
script = ExtResource( 2 )
position = Vector2( 2277.71, 574.119 )
point_in = Vector2( -225.666, 125.017 )
point_out = Vector2( 225.666, -125.017 )
properties = SubResource( 141 )

[sub_resource type="Resource" id=143]
script = ExtResource( 4 )
texture_idx = 0
flip = false
width = 1.0

[sub_resource type="Resource" id=144]
script = ExtResource( 2 )
position = Vector2( 3589.76, 726.683 )
point_in = Vector2( -593.299, -36.0219 )
point_out = Vector2( 228.844, 25.4271 )
properties = SubResource( 143 )

[sub_resource type="Resource" id=145]
script = ExtResource( 6 )
_points = {
0: SubResource( 130 ),
1: SubResource( 132 ),
2: SubResource( 134 ),
3: SubResource( 136 ),
4: SubResource( 138 ),
9: SubResource( 140 ),
12: SubResource( 142 ),
13: SubResource( 144 )
}
_point_order = [ 0, 12, 9, 13, 1, 2, 4, 3 ]
_constraints = {
[ 0, 3 ]: 15
}
_next_key = 16

[sub_resource type="StreamTexture" id=36]
flags = 2
load_path = "res://.import/grass_centre.png-9ab9bd5303abc65a0718ca67291543fb.stex"

[sub_resource type="Resource" id=37]
script = ExtResource( 5 )
_edge_meta_materials = [ ExtResource( 13 ) ]
fill_textures = [ SubResource( 36 ) ]
fill_texture_normals = [  ]
fill_texture_z_index = -10
fill_mesh_offset = 0.0
render_offset = 0.0

[sub_resource type="RectangleShape2D" id=106]
extents = Vector2( 4858, 524 )

[sub_resource type="RectangleShape2D" id=107]
extents = Vector2( 100, 524 )

[sub_resource type="RectangleShape2D" id=108]
extents = Vector2( 100, 524 )

[sub_resource type="DynamicFont" id=109]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="RectangleShape2D" id=110]
extents = Vector2( 470, 364 )

[sub_resource type="DynamicFont" id=111]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 27 )

[node name="Level4" type="Node2D"]
position = Vector2( -120, 0 )
script = ExtResource( 7 )

[node name="Character" parent="." instance=ExtResource( 8 )]
position = Vector2( -6068.5, 432 )

[node name="Camera2D" type="Camera2D" parent="Character"]
position = Vector2( 16, -106 )
current = true
smoothing_enabled = true

[node name="TrailerJoint" type="PinJoint2D" parent="Character"]
position = Vector2( -78, 36 )
node_a = NodePath("..")

[node name="GroundTiles" type="Node2D" parent="."]
position = Vector2( -6534, 0 )
z_index = -3

[node name="Shape_00_Parent" type="StaticBody2D" parent="GroundTiles" groups=[
"ground",
]]
position = Vector2( -1012, 134 )
collision_layer = 4
collision_mask = 0

[node name="Shape_00" type="Node2D" parent="GroundTiles/Shape_00_Parent"]
position = Vector2( -388, -120 )
script = ExtResource( 3 )
_points = SubResource( 128 )
material_overrides = {
}
shape_material = SubResource( 18 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 5.0
collision_offset = 10.0
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GroundTiles/Shape_00_Parent"]
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( 221.089, 422.404, 1266.44, 407.162, 2363.5, 407.397, 2673.65, 418.022, 2667.34, 1405.48, 214.694, 1420.05, 212.614, 889.585 )

[node name="Shape_01_Parent" type="StaticBody2D" parent="GroundTiles" groups=[
"ground",
]]
position = Vector2( -286, -36 )
collision_layer = 4
collision_mask = 0

[node name="Shape_01" type="Node2D" parent="GroundTiles/Shape_01_Parent"]
script = ExtResource( 3 )
_points = SubResource( 145 )
material_overrides = {
}
shape_material = SubResource( 37 )
tessellation_stages = 5
tessellation_tolerence = 4.0
flip_edges = false
render_edges = true
collision_size = 10.0
collision_offset = 5.0
collision_polygon_node_path = NodePath("../CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GroundTiles/Shape_01_Parent"]
visible = false
modulate = Color( 1, 1, 1, 0.3 )
polygon = PoolVector2Array( 1908.73, 592.484, 1934.21, 587.148, 1950.32, 594.95, 1977.94, 604.436, 1995.17, 608.518, 2015.34, 611.813, 2038.06, 613.775, 2063.28, 613.964, 2090.99, 611.934, 2121.14, 607.23, 2153.72, 599.387, 2188.68, 587.933, 2225.99, 572.385, 2266.47, 551.786, 2308.68, 530.818, 2349.87, 515.185, 2389.7, 504.999, 2428.54, 499.883, 2466.7, 499.372, 2504.94, 502.986, 2580.46, 519.514, 2989.72, 638.763, 3157.02, 674.64, 3180.76, 678.311, 3591.15, 701.722, 3634.17, 704.099, 3678.14, 702.25, 3772.52, 687.93, 3867.94, 663.251, 3958.51, 632.86, 4182.33, 553.315, 4181.5, 1570.45, 1908.4, 1570.08 )

[node name="Bottom" type="Area2D" parent="GroundTiles"]
position = Vector2( 210, 1688 )
collision_layer = 4
collision_mask = 511
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundTiles/Bottom"]
position = Vector2( 4204, 838 )
shape = SubResource( 106 )

[node name="InvisibleGate" type="Area2D" parent="GroundTiles"]
position = Vector2( 210, 1688 )
collision_layer = 4
collision_mask = 511
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundTiles/InvisibleGate"]
position = Vector2( 1334, -1704 )
shape = SubResource( 107 )

[node name="InvisibleWall" type="StaticBody2D" parent="GroundTiles" groups=[
"invisible_gate",
]]
position = Vector2( 210, 1688 )
collision_layer = 4
collision_mask = 511

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundTiles/InvisibleWall"]
position = Vector2( -194, -1580 )
shape = SubResource( 108 )

[node name="BackWall" type="StaticBody2D" parent="GroundTiles"]
position = Vector2( 17390, 1914 )
collision_layer = 4
collision_mask = 511

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundTiles/BackWall"]
position = Vector2( -194, -1580 )
shape = SubResource( 108 )

[node name="Sprite" type="Sprite" parent="GroundTiles/BackWall"]
position = Vector2( -282, -1346 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 31 )

[node name="Trailer" parent="." instance=ExtResource( 1 )]
position = Vector2( -6252, 475.5 )

[node name="Newspapers" type="Node2D" parent="."]
position = Vector2( 120, 0 )

[node name="OldMan_Chair" parent="." instance=ExtResource( 10 )]
position = Vector2( -5610, 302 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueRenderer" type="Control" parent="CanvasLayer"]
anchor_left = -0.0625
anchor_right = 0.9375
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin_Text" type="MarginContainer" parent="CanvasLayer"]
anchor_left = -0.0625
anchor_right = 0.9375
anchor_bottom = 0.1
margin_top = 30.0
margin_right = -40.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Margin_Text"]
margin_right = 1880.0
margin_bottom = 89.0

[node name="NumPapers" type="Label" parent="CanvasLayer/Margin_Text/VBox"]
margin_right = 1880.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 109 )
text = "PAPERS: <NUMBER>"
align = 2

[node name="Delivered" type="Label" parent="CanvasLayer/Margin_Text/VBox"]
margin_top = 31.0
margin_right = 1880.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 109 )
text = "DELIVERED: X/Y"
align = 2

[node name="TimeLeft" type="Label" parent="CanvasLayer/Margin_Text/VBox"]
margin_top = 62.0
margin_right = 1880.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 109 )
text = "TIME LEFT: XX:YY"
align = 2

[node name="Parallax" type="ParallaxBackground" parent="CanvasLayer"]
follow_viewport_enable = true

[node name="Background_Back" type="ParallaxLayer" parent="CanvasLayer/Parallax"]
position = Vector2( -900, -1200 )
motion_scale = Vector2( 0.1, 0.01 )
motion_mirroring = Vector2( 7680, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Parallax/Background_Back"]
scale = Vector2( 6, 6 )
texture = ExtResource( 19 )
centered = false

[node name="Background_Middle" type="ParallaxLayer" parent="CanvasLayer/Parallax"]
position = Vector2( -900, -1400 )
motion_scale = Vector2( 0.2, 0.02 )
motion_mirroring = Vector2( 7680, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Parallax/Background_Middle"]
scale = Vector2( 6, 6 )
texture = ExtResource( 18 )
centered = false

[node name="BackgroundFront" type="ParallaxLayer" parent="CanvasLayer/Parallax"]
position = Vector2( -900, -1500 )
motion_scale = Vector2( 0.3, 0.03 )
motion_mirroring = Vector2( 7680, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Parallax/BackgroundFront"]
scale = Vector2( 6, 6 )
texture = ExtResource( 17 )
centered = false

[node name="GameMenu" parent="CanvasLayer" instance=ExtResource( 32 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -380.0
margin_right = 192.0
margin_bottom = 20.0

[node name="LoseMenu" parent="CanvasLayer" instance=ExtResource( 44 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -228.0
margin_right = 192.0
margin_bottom = 172.0

[node name="TimeoutMenu" parent="CanvasLayer" instance=ExtResource( 45 )]
visible = false
margin_left = 768.0
margin_top = 312.0
margin_right = 1152.0
margin_bottom = 712.0

[node name="Setpieces" type="Node2D" parent="."]
position = Vector2( -3632, 0 )

[node name="Setpiece_School" type="Sprite" parent="Setpieces"]
position = Vector2( -2664, 186 )
z_index = -2
texture = ExtResource( 9 )

[node name="GoalAreas" type="Node2D" parent="."]
position = Vector2( -3632, 0 )

[node name="Goal1" type="Area2D" parent="GoalAreas"]
position = Vector2( 3230, -54 )
collision_layer = 512
collision_mask = 2
script = ExtResource( 24 )

[node name="GrassExtender" type="Sprite" parent="GoalAreas/Goal1"]
position = Vector2( 104, 342 )
scale = Vector2( 5, 5 )
z_index = -5
texture = ExtResource( 26 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalAreas/Goal1"]
position = Vector2( 600, 272 )
shape = SubResource( 110 )

[node name="Sprite" type="Sprite" parent="GoalAreas/Goal1"]
modulate = Color( 0.964706, 0.631373, 0.631373, 1 )
position = Vector2( 618, 188 )
scale = Vector2( 6, 6 )
z_index = -5
texture = ExtResource( 23 )
flip_h = true

[node name="Prompt" type="AnimatedSprite" parent="GoalAreas/Goal1"]
position = Vector2( 778, 54 )
scale = Vector2( 6, 6 )
frames = ExtResource( 22 )
playing = true

[node name="Paper" type="Sprite" parent="GoalAreas/Goal1"]
position = Vector2( 338, 460 )
scale = Vector2( 0.8, 0.8 )
z_index = -5
texture = ExtResource( 25 )

[node name="DeliverText" type="Label" parent="GoalAreas/Goal1"]
margin_left = 664.0
margin_top = 22.0
margin_right = 954.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 111 )
text = "DELIVERED!"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Ding" type="AudioStreamPlayer2D" parent="GoalAreas/Goal1"]
stream = ExtResource( 43 )

[node name="Goal2" type="Area2D" parent="GoalAreas"]
position = Vector2( 7292, -362 )
collision_layer = 512
collision_mask = 2
script = ExtResource( 28 )

[node name="GrassExtender" type="Sprite" parent="GoalAreas/Goal2"]
position = Vector2( 168, 392 )
scale = Vector2( 4, 5 )
z_index = -5
texture = ExtResource( 26 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalAreas/Goal2"]
position = Vector2( 600, 272 )
shape = SubResource( 110 )

[node name="Sprite" type="Sprite" parent="GoalAreas/Goal2"]
modulate = Color( 0.870588, 0.937255, 0.541176, 1 )
position = Vector2( 598, 232 )
scale = Vector2( 6, 6 )
z_index = -5
texture = ExtResource( 29 )

[node name="Prompt" type="AnimatedSprite" parent="GoalAreas/Goal2"]
position = Vector2( 696, 162 )
scale = Vector2( 6, 6 )
frames = ExtResource( 22 )
playing = true

[node name="Paper" type="Sprite" parent="GoalAreas/Goal2"]
position = Vector2( 794, 496 )
scale = Vector2( 0.8, 0.8 )
z_index = -5
texture = ExtResource( 25 )

[node name="DeliverText" type="Label" parent="GoalAreas/Goal2"]
margin_left = 664.0
margin_top = 22.0
margin_right = 954.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 111 )
text = "DELIVERED!"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Ding" type="AudioStreamPlayer2D" parent="GoalAreas/Goal2"]
stream = ExtResource( 43 )

[node name="Goal3" type="Area2D" parent="GoalAreas"]
position = Vector2( 12552, 156 )
collision_layer = 512
collision_mask = 2
script = ExtResource( 35 )

[node name="GrassExtender" type="Sprite" parent="GoalAreas/Goal3"]
position = Vector2( 104, 342 )
scale = Vector2( 5, 5 )
z_index = -5
texture = ExtResource( 26 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalAreas/Goal3"]
position = Vector2( 600, 272 )
shape = SubResource( 110 )

[node name="Sprite" type="Sprite" parent="GoalAreas/Goal3"]
position = Vector2( 1086, -374 )
scale = Vector2( 6, 6 )
z_index = -5
texture = ExtResource( 33 )

[node name="Prompt" type="AnimatedSprite" parent="GoalAreas/Goal3"]
position = Vector2( 424, 194 )
scale = Vector2( 6, 6 )
frames = ExtResource( 22 )
frame = 1
playing = true

[node name="Paper" type="Sprite" parent="GoalAreas/Goal3"]
position = Vector2( 456, 462 )
scale = Vector2( 0.8, 0.8 )
z_index = -5
texture = ExtResource( 25 )

[node name="DeliverText" type="Label" parent="GoalAreas/Goal3"]
margin_left = 664.0
margin_top = 22.0
margin_right = 954.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 111 )
text = "DELIVERED!"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Ding" type="AudioStreamPlayer2D" parent="GoalAreas/Goal3"]
stream = ExtResource( 43 )

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 30 )
volume_db = -10.0
bus = "Music"

[node name="WinNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )
volume_db = 10.0

[connection signal="body_entered" from="GroundTiles/Bottom" to="GroundTiles/Bottom" method="_on_Bottom_body_entered"]
[connection signal="body_entered" from="GroundTiles/InvisibleGate" to="GroundTiles/InvisibleGate" method="_on_InvisibleGate_body_entered"]
[connection signal="body_entered" from="GoalAreas/Goal1" to="GoalAreas/Goal1" method="_on_Goal1_body_entered"]
[connection signal="body_exited" from="GoalAreas/Goal1" to="GoalAreas/Goal1" method="_on_Goal1_body_exited"]
[connection signal="body_entered" from="GoalAreas/Goal2" to="GoalAreas/Goal2" method="_on_Goal1_body_entered"]
[connection signal="body_exited" from="GoalAreas/Goal2" to="GoalAreas/Goal2" method="_on_Goal1_body_exited"]
[connection signal="body_entered" from="GoalAreas/Goal3" to="GoalAreas/Goal3" method="_on_Goal1_body_entered"]
[connection signal="body_exited" from="GoalAreas/Goal3" to="GoalAreas/Goal3" method="_on_Goal1_body_exited"]
